# osm-transit-extractor

./: Cargo.toml
src/: lib.rs  main.rs
tests/: stops_csv_tests.rs
tests/fixtures/: station.osm.pbf
