[package]
authors = ["Pascal Rhod <pascal.rhod@canaltp.fr>", "Noémie Lehuby <noemie.lehuby@canaltp.fr>"]
categories = ["data-structures", "encoding", "parser-implementations"]
description = "Extract public transport data from an OpenStreetMap file"
edition = "2018"
keywords = ["osm", "transit"]
license = "AGPL-3.0"
name = "osm_transit_extractor"
readme = "README.md"
repository = "https://github.com/CanalTP/osm-transit-extractor"
version = "0.4.1"

[badges]
travis-ci = {repository = "CanalTP/osm-transit-extractor"}

[dependencies]
csv = "1"
geo-types = "0.7"
log = "0.4"
osmpbfreader = "0.14"
serde = "1"
serde_derive = "1"
simple_logger = "1"
structopt = "0.3"
tempfile = "3"
wkt = "0.9"
